# path-tracing-renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  path-tracing-renderer.cpp
src/: color.h  path-tracing-renderer.cpp  ray.h
src/renders/: rendered-image.ppm
